--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+@media only screen and (max-width: 480px) {
+  h1 {
+    font-weight: 100;
+    font-size: 2em;
+  }  }
+
+
+  
 body {
     text-align: center;
     font-family: 'Helvetica Neue', arial;
